tests/fail/fail_return_value_in_void.kl
// ERROR: returning a value from a function without a return type.
fn inisiu() {
    divolvi 5;
}
